# weightprobe

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/weightprobe/: __init__.py  __main__.py  adapter_inject.py  cli.py  diff_base.py  hash.py  inventory.py  live_probe.py  payload_shape.py  rev_trigger.py  scan.py  signing.py  spectral.py  verify.py
tests/: test_hash_verify.py  test_inventory.py  test_live_probe.py  test_payload_shape.py  test_rev_trigger.py  test_scan.py  test_signing.py  test_spectral_diff_base.py
