[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weightprobe"
version = "0.2.0"
description = "Defensive tooling for architectural backdoors and supply-chain trojans in transformer LLM repos - nine detection modes (hash, verify, inventory, spectral, diff-base, payload-shape, scan, live-probe, rev-trigger) plus OpenSSF-style signing and OWASP AI BOM emission."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Bodhisattva Das", email = "bodhisattva.das@rudrasecure.com"}]
keywords = [
    "llm-security",
    "supply-chain",
    "backdoor-detection",
    "model-attestation",
    "transformer",
    "safetensors",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Required at runtime: numpy (for spectral / diff-base / scan / live-probe
# numerical routines) and safetensors (for tensor header reads). Together
# these are ~30 MB. The structural-only modes (hash, verify, inventory)
# don't use either at runtime but they ship in the same package; pinning
# both here keeps `pip install weightprobe` a single-step install for the
# common case.
dependencies = [
    "numpy>=1.24",
    "safetensors>=0.4",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# MLX-backed runtime modes — scan (adapter-aware activation probe),
# live-probe (per-prompt z-score classifier). Mac / Apple-Silicon only.
runtime = ["mlx>=0.20", "mlx-lm>=0.19"]
# OpenSSF Model-Signing-style ed25519 signing + AIBOM emission.
signing = ["cryptography>=42.0"]
# Convenience: everything.
full = [
    "weightprobe[runtime]",
    "weightprobe[signing]",
]

[project.urls]
Homepage     = "https://github.com/bdas-sec/weightprobe"
Repository   = "https://github.com/bdas-sec/weightprobe"
Issues       = "https://github.com/bdas-sec/weightprobe/issues"
Changelog    = "https://github.com/bdas-sec/weightprobe/blob/main/CHANGELOG.md"

[project.scripts]
weightprobe = "weightprobe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
